<resources>
    <string name="app_name">prova_upload_image</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="fullname">Fullname</string>
    <string name="phone">Phone</string>
    <string name="confirm_password">Confirm Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="category">Category</string>
    <string name="city">City</string>
    <string name="api_key_prof">AIzaSyBrJ3ec9wTuS6L-xHkaXLU8BJbFsx_LZ9o</string>
    <string name="price">Price</string>
    <string name="pc_desktop">Pc Desktop</string>
    <string name="notebook">Notebook</string>
    <string name="tablet">Tablet</string>
    <string name="smartphone">Smartphone</string>
</resources>