<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AddProduct">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="280dp"
                >


                <ImageView
                    android:id="@+id/image_product"
                    android:layout_width="230dp"
                    android:layout_height="300dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_outline_add_photo_alternate_24_black"
                    />

                <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_photo_product"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="210dp"
                android:layout_marginStart="300dp"
                android:paddingStart="8dp"
                app:icon="@drawable/ic_outline_add_to_photos_24_white"
                />



            </RelativeLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/title_text"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                app:startIconDrawable="@drawable/ic_outline_text_fields_24_black"
                app:endIconMode="clear_text"
                android:hint="@string/title"
                app:counterEnabled="true"
                app:counterMaxLength="20">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/title_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLength="20"
                     />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/description_text"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                app:startIconDrawable="@drawable/ic_outline_textsms_24_black"
                app:endIconMode="clear_text"
                android:hint="@string/description"
                app:counterEnabled="true"
                app:counterMaxLength="150"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/description_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="150"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/place_text"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                app:startIconDrawable="@drawable/ic_outline_place_24_black"
                app:endIconMode="clear_text"
                android:hint="@string/city"

                >

                <AutoCompleteTextView
                    android:id="@+id/autoCompletePlace"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
            </com.google.android.material.textfield.TextInputLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/category_choice"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                app:endIconMode="dropdown_menu"
                android:hint="@string/category"
                >

                <AutoCompleteTextView
                    android:id="@+id/autoCompleteCategory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
            </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/conditions_choice"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_toEndOf="@+id/category_choice"
                    android:hint="Conditions"
                    app:endIconMode="dropdown_menu">

                    <AutoCompleteTextView
                        android:id="@+id/autoCompleteConditions"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@+id/category_choice"
                        />
                </com.google.android.material.textfield.TextInputLayout>



            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="More Info"
                    android:clickable="true"
                    android:layout_alignParentEnd="true"
                    android:paddingEnd="15dp"


                    android:focusable="true"
                   />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/price_text"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_centerHorizontal="true"
                    app:startIconDrawable="@drawable/ic_outline_euro_24_black"
                    app:endIconMode="clear_text"
                    android:hint="@string/price"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/price_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        />
                </com.google.android.material.textfield.TextInputLayout>


            </RelativeLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginEnd="10dp"
                android:textColor="@color/white"
                android:text="add product "
                app:icon="@drawable/ic_add_circle_24_white"

                />



        </LinearLayout>
    </ScrollView>

</FrameLayout>