<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/pc_desktop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:strokeColor="#0099ff"
        app:strokeWidth="1dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/photo_product"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
             />

        <TextView
            android:id="@+id/title_product"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:layout_margin="8dp"
            android:textSize="30dp" />
        <TextView
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:textSize="18dp"
            android:textColor="@color/blue1"/>

        <TextView
            android:id="@+id/description_product"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:textSize="20dp" />

        <TextView
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:textSize="18dp"
            android:textColor="@color/blue1"/>

        <TextView
            android:id="@+id/city_product"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/city"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:textSize="20dp"
            android:clickable="true"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:text="@string/category"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:textSize="18dp"
                android:textColor="@color/blue1" />

            <TextView

                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="Conditions"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:textSize="18dp"
                android:textColor="@color/blue1" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


        <TextView
            android:id="@+id/category_product"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:hint="@string/category"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/conditions_product"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:hint="Conditions"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:textSize="20dp" />


    </LinearLayout>

        <TextView
            android:id="@+id/more_info_product"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_alignParentEnd="true"
            android:clickable="true"
            android:focusable="true"
            android:paddingEnd="15dp"
            android:text="More Info"
            android:textSize="15dp"
            android:textColor="@color/blue1"
            />


        <TextView
            android:id="@+id/price_product"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Price"
            android:layout_margin="8dp"
            android:layout_gravity="center"
            android:textSize="25dp"
            android:drawableStart="@drawable/ic_outline_euro_24_black"/>

        <TextView
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Contact seller"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:textSize="18dp"
            android:textColor="@color/blue1"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/seller_mail"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:hint="seller mail"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/seller_phone"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:hint="seller phone"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:textSize="20dp" />

        </LinearLayout>

    </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>